--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # 所有情况下都会加载
+VITE_BASE_URL = '/IDCAdmin'
 VITE_API_CAPACITY_ARRANGE = /capacity_arrange
 VITE_API_CONEX = /conex
 VITE_API_TOYH = /toYh
