--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Gkood",
   "scripts": {
     "serve": "vite --host",
-    "build": "run-p type-check build-only",
+    "build": "run-p build-only",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
     "build-only": "vite build",
