--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vite-plugin-require-transform": "^1.0.12",
     "vue": "^2.7.14",
     "vue-i18n": "^8.28.2",
+    "vue-pdf": "^3.3.1",
     "vue-router": "^3.5.4",
     "vxe-table": "^3.6.13",
     "xe-utils": "^3.5.7"
