--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,4 @@
 # 生产环境加载
+VITE_PATH_8083 = 'http://192.168.80.193:8083'
+VITE_PATH_8084 = 'http://192.168.80.193:8084'
+VITE_PATH_8086 = 'http://192.168.80.193:8086'
